--- a/stylesheet/index3.css
+++ b/stylesheet/index3.css
@@ -7,21 +7,34 @@ html{color:#000;
 
 #top h1{margin : 10px 0 20px 100px; 
 	font-size: 30px ;
-	color:RoyalBlue}
+	color:HotPink}
 
 
-#main {margin-left: 100px; font-size: 15px;}
+#main {margin-left: 100px; font-size: 15px; color: MidnightBlue }
 
 .name input{
+	border-color: pink;
 	background-color:ivory;
+	border-style: dotted;
 	width: 100px;
 }
 
+.checkbox { color: purple }
+.radio { color : DarkSlateGray;}
+.selectbox{ color : Indigo;}
 
 .red{color: red; font-size: 10px}
 
+.textfiled textarea{
+	border-color: pink;
+	background-color: ivory;
+	border-style: dashed;
+	width: 200px;
+	height: 100px;
 
-#bottom{margin-left: 100px; font-size: 20px; color: HotPink;}
+}
 
-a:visited{text-decoration:none; color: red;}
-a:hover{text-decoration:none; color: blue;}
+#bottom{margin-left: 100px; font-size: 20px; color:blue;}
+
+a:visited{text-decoration:none; color: blue;}
+a:hover{text-decoration:none; color: red;}
