--- a/stylesheet/index3.css
+++ b/stylesheet/index3.css
@@ -21,16 +21,24 @@ html{color:#000;
 
 .checkbox { color: purple }
 .radio { color : DarkSlateGray;}
-.selectbox{ color : Indigo;}
+.selectbox{ 
+	color : Indigo;
+ 	overflow: hidden;}
+.selectbox select{ width: 200px;}
 
 .red{color: red; font-size: 10px}
 
 .textfiled textarea{
 	border-color: pink;
 	background-color: ivory;
+	border-width: 3px;
 	border-style: dashed;
 	width: 200px;
-	height: 100px;
+	height: 50px;
+	font-size: 12px;
+	color:gray;
+
+	overflow: scroll;
 
 }
 
